Added basic layout.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Shopper</title>
+        <title>Plant_Shopper</title>
         <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0hCU-mzBUAALrwP2-aaWfNoT-8rZ066658AwXWrF88QXdagcHqA">
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
@@ -13,8 +13,13 @@
 
         </header>
         <div id="many_items">
-            <div class="item">
-                asdasd
+            <div class="item" id="item_1">
+                <div class="sales">
+                    asdasd
+                </div>
+                <div class="description">
+                    fghfgh
+                </div>
             </div>
         </div>
 
