Finished early structure!

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-
+            qwe
         </header>
         <div id="many_items">
             <div class="item" id="item_1">
@@ -21,7 +21,49 @@
                     fghfgh
                 </div>
             </div>
+            <div class="item" id="item_2">
+                <div class="sales">
+                    asdasd
+                </div>
+                <div class="description">
+                    fghfgh
+                </div>
+            </div>
+            <div class="item" id="item_3">
+                <div class="sales">
+                    asdasd
+                </div>
+                <div class="description">
+                    fghfgh
+                </div>
+            </div>
+            <div class="item" id="item_4">
+                <div class="sales">
+                    asdasd
+                </div>
+                <div class="description">
+                    fghfgh
+                </div>
+            </div>
+            <div class="item" id="item_5">
+                <div class="sales">
+                    asdasd
+                </div>
+                <div class="description">
+                    fghfgh
+                </div>
+            </div>
+            <div class="item" id="item_6">
+                <div class="sales">
+                    asdasd
+                </div>
+                <div class="description">
+                    fghfgh
+                </div>
+            </div>
         </div>
-
+        <footer>
+            rty
+        </footer>
     </body>
 </html>
