Added nice style :)

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     </head>
     <body>
         <header>
-            qwe
+            <h1>Plant_Shopper</h1>
         </header>
         <div id="many_items">
             <div class="item" id="item_1">
                 <div class="sales">
-                    asdasd
+                    -10%
                 </div>
                 <div class="description">
                     fghfgh
@@ -23,7 +23,7 @@
             </div>
             <div class="item" id="item_2">
                 <div class="sales">
-                    asdasd
+                    -25%
                 </div>
                 <div class="description">
                     fghfgh
@@ -31,7 +31,7 @@
             </div>
             <div class="item" id="item_3">
                 <div class="sales">
-                    asdasd
+                    -10%
                 </div>
                 <div class="description">
                     fghfgh
@@ -39,7 +39,7 @@
             </div>
             <div class="item" id="item_4">
                 <div class="sales">
-                    asdasd
+                    -15%
                 </div>
                 <div class="description">
                     fghfgh
@@ -47,7 +47,7 @@
             </div>
             <div class="item" id="item_5">
                 <div class="sales">
-                    asdasd
+                    -35%
                 </div>
                 <div class="description">
                     fghfgh
@@ -55,7 +55,7 @@
             </div>
             <div class="item" id="item_6">
                 <div class="sales">
-                    asdasd
+                    -5%
                 </div>
                 <div class="description">
                     fghfgh
