Forgot the heart icon -.-

--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
                 <div class="sales">
                     -10%
                 </div>
+                <div class="yes_please">
+                    &hearts;
+                </div>
                 <div class="description">
                     fghfgh
                 </div>
             </div>
             <div class="item" id="item_2">
                 <div class="sales">
-                    -25%
+                    -10%
+                </div>
+                <div class="yes_please">
+                    &hearts;
                 </div>
                 <div class="description">
                     fghfgh
@@ -33,13 +39,19 @@
                 <div class="sales">
                     -10%
                 </div>
+                <div class="yes_please">
+                    &hearts;
+                </div>
                 <div class="description">
                     fghfgh
                 </div>
             </div>
             <div class="item" id="item_4">
                 <div class="sales">
-                    -15%
+                    -10%
+                </div>
+                <div class="yes_please">
+                    &hearts;
                 </div>
                 <div class="description">
                     fghfgh
@@ -47,7 +59,10 @@
             </div>
             <div class="item" id="item_5">
                 <div class="sales">
-                    -35%
+                    -10%
+                </div>
+                <div class="yes_please">
+                    &hearts;
                 </div>
                 <div class="description">
                     fghfgh
@@ -55,7 +70,10 @@
             </div>
             <div class="item" id="item_6">
                 <div class="sales">
-                    -5%
+                    -10%
+                </div>
+                <div class="yes_please">
+                    &hearts;
                 </div>
                 <div class="description">
                     fghfgh
