Added heart icon disappearing + final style

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="item" id="item_2">
                 <div class="sales">
-                    -10%
+                    -15%
                 </div>
                 <div class="yes_please">
                     &hearts;
@@ -37,7 +37,7 @@
             </div>
             <div class="item" id="item_3">
                 <div class="sales">
-                    -10%
+                    -25%
                 </div>
                 <div class="yes_please">
                     &hearts;
@@ -59,7 +59,7 @@
             </div>
             <div class="item" id="item_5">
                 <div class="sales">
-                    -10%
+                    -5%
                 </div>
                 <div class="yes_please">
                     &hearts;
@@ -70,7 +70,7 @@
             </div>
             <div class="item" id="item_6">
                 <div class="sales">
-                    -10%
+                    -40%
                 </div>
                 <div class="yes_please">
                     &hearts;
@@ -81,7 +81,7 @@
             </div>
         </div>
         <footer>
-            rty
+            Powered with &hearts;, by Bafio93.
         </footer>
     </body>
 </html>
