--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     &hearts;
                 </div>
                 <div class="description">
-                    fghfgh
+                    Single cacti :O
                 </div>
             </div>
             <div class="item" id="item_2">
@@ -32,7 +32,7 @@
                     &hearts;
                 </div>
                 <div class="description">
-                    fghfgh
+                    Cactus family :)
                 </div>
             </div>
             <div class="item" id="item_3">
@@ -43,7 +43,7 @@
                     &hearts;
                 </div>
                 <div class="description">
-                    fghfgh
+                    Cacti rainbow! OwO
                 </div>
             </div>
             <div class="item" id="item_4">
@@ -54,7 +54,7 @@
                     &hearts;
                 </div>
                 <div class="description">
-                    fghfgh
+                    Cacti bouquet!
                 </div>
             </div>
             <div class="item" id="item_5">
@@ -65,7 +65,7 @@
                     &hearts;
                 </div>
                 <div class="description">
-                    fghfgh
+                    Me and the boys XD
                 </div>
             </div>
             <div class="item" id="item_6">
@@ -76,7 +76,7 @@
                     &hearts;
                 </div>
                 <div class="description">
-                    fghfgh
+                    Never too many!!! 
                 </div>
             </div>
         </div>
