--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     &hearts;
                 </div>
                 <div class="description">
-                    Single cacti :O
+                    Single cactus :O
                 </div>
             </div>
             <div class="item" id="item_2">
